@@ -14,6 +14,7 @@ import sv.edu.ues.occ.ingenieria.prn335_2025.inventario.web.core.entity.TipoAlma
 
 import java.io.Serializable;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Named
 @ViewScoped
@@ -29,6 +30,7 @@ public class AlmacenFrm extends DefaultFrm<Almacen> implements Serializable {
     TipoAlmacenDAO tipoAlmacenDAO;
 
     private List<TipoAlmacen> listaTiposAlmacen;
+    private Integer idTipoSeleccionado;
 
     public AlmacenFrm() {
         this.nombreBean = "Almacén";
@@ -55,11 +57,10 @@ public class AlmacenFrm extends DefaultFrm<Almacen> implements Serializable {
     protected Almacen buscarRegistroPorId(Object id) {
         if (id != null && id instanceof Integer buscado) {
             try {
-                // ✅ USA EL MÉTODO findById - NO cargues todos los registros
-                return almacenDAO.findById(buscado);
+                Almacen resultado = almacenDAO.findById(buscado);
+                return resultado;
             } catch (Exception e) {
-                System.err.println("Error buscando almacén con ID: " + id);
-                e.printStackTrace();
+                System.err.println(" Error buscando almacén: " + e.getMessage());
             }
         }
         return null;
@@ -67,10 +68,8 @@ public class AlmacenFrm extends DefaultFrm<Almacen> implements Serializable {
 
     @Override
     protected String getIdAsText(Almacen r) {
-        if (r != null && r.getId() != null) {
-            return r.getId().toString();
-        }
-        return null;
+        String resultado = (r != null && r.getId() != null) ? r.getId().toString() : null;
+        return resultado;
     }
 
     @Override
@@ -78,47 +77,47 @@ public class AlmacenFrm extends DefaultFrm<Almacen> implements Serializable {
         if (id != null && !id.trim().isEmpty()) {
             try {
                 Integer buscado = Integer.parseInt(id.trim());
-                // ✅ Buscar directamente en la base de datos
-                return buscarRegistroPorId(buscado);
+                Almacen resultado = almacenDAO.findById(buscado);
+                return resultado;
             } catch (NumberFormatException e) {
-                System.err.println("ID no es un número válido: " + id);
             }
         }
         return null;
     }
 
-    // --- SOBREESCRIBIR LA VALIDACIÓN DE NOMBRE ---
     @Override
     protected boolean esNombreVacio(Almacen registro) {
-        // Como Almacen no tiene campo 'nombre', retornamos false
         return false;
     }
 
-    // --- SOBREESCRIBIR EL MÉTODO GUARDAR PARA AGREGAR VALIDACIÓN ---
     @Override
     public void btnGuardarHandler(ActionEvent actionEvent) {
-        // Validación personalizada antes de guardar
-        if (this.registro != null && this.registro.getIdTipoAlmacen() == null) {
-            facesContext.addMessage(null,
+        if (this.registro != null && this.idTipoSeleccionado == null) {
+            facesContext.addMessage("frmCrear:cbTipoAlmacen",
                     new FacesMessage(FacesMessage.SEVERITY_ERROR,
                             "Error de validación",
                             "Debe seleccionar un tipo de almacén"));
             return;
         }
 
-        // Llamar al método original
+        if (this.registro != null && this.registro.getIdTipoAlmacen() == null) {
+            TipoAlmacen tipo = tipoAlmacenDAO.findById(idTipoSeleccionado);
+            this.registro.setIdTipoAlmacen(tipo);
+        }
         super.btnGuardarHandler(actionEvent);
+        this.idTipoSeleccionado = null;
+        this.listaTiposAlmacen = null;
     }
 
-    // --- CARGA DE LISTA DE TIPOS DE ALMACÉN ---
     public List<TipoAlmacen> getListaTiposAlmacen() {
         if (listaTiposAlmacen == null) {
             try {
-                listaTiposAlmacen = tipoAlmacenDAO.findAll();
+                listaTiposAlmacen = tipoAlmacenDAO.findAll()
+                        .stream()
+                        .filter(t -> t.getActivo() != null && t.getActivo())
+                        .collect(Collectors.toList());
             } catch (Exception e) {
-                System.err.println("Error cargando tipos de almacén:");
-                e.printStackTrace();
-                listaTiposAlmacen = List.of();
+                listaTiposAlmacen = java.util.Collections.emptyList();
             }
         }
         return listaTiposAlmacen;
@@ -126,5 +125,94 @@ public class AlmacenFrm extends DefaultFrm<Almacen> implements Serializable {
 
     public void setListaTiposAlmacen(List<TipoAlmacen> listaTiposAlmacen) {
         this.listaTiposAlmacen = listaTiposAlmacen;
+    }
+
+    public Integer getIdTipoSeleccionado() {
+        if (registro != null && registro.getIdTipoAlmacen() != null) {
+            Integer id = registro.getIdTipoAlmacen().getId();
+            return id;
+        }
+        System.out.println(" getIdTipoSeleccionado: null");
+        return idTipoSeleccionado;
+    }
+
+    public void setIdTipoSeleccionado(Integer id) {
+        this.idTipoSeleccionado = id;
+        if (id != null && registro != null) {
+            try {
+                TipoAlmacen tipo = tipoAlmacenDAO.findById(id);
+                registro.setIdTipoAlmacen(tipo);
+            } catch (Exception e) {
+            }
+        }
+    }
+
+    public String prepararNuevo() {
+        this.registro = nuevoRegistro();
+        this.estado = ESTADO_CRUD.CREAR;
+        this.idTipoSeleccionado = null;
+        return null;
+    }
+    public String guardar() {
+        if (this.idTipoSeleccionado == null) {
+            facesContext.addMessage("frmCrear:cbTipoAlmacen",
+                    new FacesMessage(FacesMessage.SEVERITY_ERROR,
+                            "Error", "Debe seleccionar un tipo de almacén"));
+            return null;
+        }
+
+        if (this.registro.getIdTipoAlmacen() == null) {
+            TipoAlmacen tipo = tipoAlmacenDAO.findById(idTipoSeleccionado);
+            this.registro.setIdTipoAlmacen(tipo);
+        }
+
+        btnGuardarHandler(null);
+
+        this.idTipoSeleccionado = null;
+        this.listaTiposAlmacen = null;
+        return null;
+    }
+
+    public String modificar() {
+
+        if (this.idTipoSeleccionado == null) {
+            facesContext.addMessage("frmCrear:cbTipoAlmacen",
+                    new FacesMessage(FacesMessage.SEVERITY_ERROR,
+                            "Error", "Debe seleccionar un tipo de almacén"));
+            return null;
+        }
+
+        if (this.registro.getIdTipoAlmacen() == null) {
+            TipoAlmacen tipo = tipoAlmacenDAO.findById(idTipoSeleccionado);
+            this.registro.setIdTipoAlmacen(tipo);
+        }
+        btnGuardarHandler(null);
+        this.idTipoSeleccionado = null;
+        this.listaTiposAlmacen = null;
+        return null;
+    }
+
+    public String eliminar() {
+        try {
+            if (this.registro != null) {
+                btnEliminarHandler(null);
+                this.registro = null;
+                this.idTipoSeleccionado = null;
+                this.estado = ESTADO_CRUD.NADA;
+            }
+        } catch (Exception e) {
+            System.err.println("❌ ERROR ELIMINAR: " + e.getMessage());
+            facesContext.addMessage(null,
+                    new FacesMessage(FacesMessage.SEVERITY_ERROR,
+                            "Error", "No se pudo eliminar el almacén"));
+        }
+        return null;
+    }
+
+    public String cancelar() {
+        this.registro = null;
+        this.idTipoSeleccionado = null;
+        this.estado = ESTADO_CRUD.NADA;
+        return null;
     }
 }
